feat: Complete Ethiopian Orthodox Mezmur Collection for GitHub Pages deployment
- Add comprehensive README with features and setup instructions
- Configure Vite for GitHub Pages with proper base path (/Yetimket-Mezmurat/)
- Add GitHub Actions workflow for automatic deployment
- Update package.json with deployment scripts and metadata
- Add MIT license and detailed deployment guide
- Structure project for production deployment
- Include Amharic language support and custom fonts
- Implement responsive design with dark/light themes
- Add search functionality with autocomplete
- Include favorites system and reading view

Ready for GitHub Pages deployment at https://Hossiy21.github.io/Yetimket-Mezmurat/

--- a/package.json
+++ b/package.json
@@ -1,21 +1,43 @@
 {
   "name": "orthodox-mezmur---bole-debre-salem",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Ethiopian Orthodox Tewahedo Church mezmur collection from Bole Debre Salem Medhane'Alem Church",
+  "keywords": [
+    "ethiopian",
+    "orthodox",
+    "mezmur",
+    "hymns",
+    "amharic",
+    "church",
+    "boole-debre-salem"
+  ],
+  "author": "Hossiy Dev",
+  "license": "MIT",
+  "homepage": "https://hossiydev.github.io/orthodox-mezmur---bole-debre-salem/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hossiydev/orthodox-mezmur---bole-debre-salem.git"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^19.2.3",
     "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
